--- a/scripts/scripts/testing/source_table.html
+++ b/scripts/scripts/testing/source_table.html
@@ -1,5 +1,5 @@
 <h3>Download the data</h3>
-<p class="has-text-align-center">Last update: <strong>August 23, 2021 13:00, London time</strong>.<br><em>(Our testing dataset is updated around twice a week.)</em></p>
+<p class="has-text-align-center">Last update: <strong>August 24, 2021 10:00, London time</strong>.<br><em>(Our testing dataset is updated around twice a week.)</em></p>
 <p>We make our full testing dataset, alongside detailed source descriptions, available&nbsp;<a href="https://github.com/owid/covid-19-data/tree/master/public/data/">on GitHub here</a>. Our testing dataset is updated around twice a week.</p>
 <h3>How to cite our testing data</h3>
 <p>Hasell, J., Mathieu, E., Beltekian, D. <em>et al.</em> A cross-country database of COVID-19 testing. <em>Sci Data</em> <strong>7</strong>, 345 (2020). <a href="https://doi.org/10.1038/s41597-020-00688-8">https://doi.org/10.1038/s41597-020-00688-8</a></p>
@@ -16,8 +16,8 @@
 <p>Countries publish their testing data at different frequencies: some provide daily updates, others only weekly, and some only publish figures on an ad-hoc basis at longer intervals.</p>
 <p>Because of this, the most recent data we have for different countries refers to different dates. This chart shows you how up to date the latest data is for each country in our dataset.</p>
 <p>Our dataset covers <strong>91%</strong> of the world's population:</p>
-<ul><li><strong>36%</strong> is covered with figures relating to <strong>22 August 2021</strong> or later;</li>
-<li><strong>63%</strong> is covered with figures relating to <strong>16 August 2021</strong> or later.</li>
+<ul><li><strong>11%</strong> is covered with figures relating to <strong>23 August 2021</strong> or later;</li>
+<li><strong>63%</strong> is covered with figures relating to <strong>17 August 2021</strong> or later.</li>
 </ul>
 <iframe src="https://ourworldindata.org/grapher/how-recent-is-the-latest-testing-data-for-each-country-last-update" style="width: 100%; height: 600px; border: 0px none;"></iframe>
 <h3>Source information country by country</h3><p>This is the list of the 136 countries for which we have data.<br>At the very bottom of this post, you can also find the list of countries for which we have attempted to collect data but could not find official sources.<br>You can download the full dataset alongside the detailed source descriptions <a href="https://github.com/owid/covid-19-data/tree/master/public/data/">on GitHub</a>.<br>Or else click to jump to the detailed source description and the latest data for that country:</p>
@@ -1033,7 +1033,7 @@
 
 <h4>South Africa</h4>
 <p style="font-weight:bold; font-style:italic">→ View <a href="https://ourworldindata.org/coronavirus-country-by-country?country=ZAF">the country profile of South Africa</a> for the coronavirus pandemic.</p>
-<p><strong>Source: </strong><a href="https://www.nicd.ac.za/diseases-a-z-index/disease-index-covid-19/surveillance-reports/weekly-testing-summary/">National Institute for Communicable Diseases (NICD)</a></p>
+<p><strong>Source: </strong><a href="https://twitter.com/HealthZA?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">National Institute for Communicable Diseases (NICD)</a></p>
 <p><strong>Short description: </strong>The number of people tested.</p>
 <p><strong>Test definition: </strong>PCR + antigen</p>
 <p><strong>Case definition: </strong>PCR + antigen</p>
